fixtures/src/valid/epub3-multi-chapter/OEBPS/chapter2.xhtml
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE html>
<html xmlns="http://www.w3.org/1999/xhtml">
<head><title>Chapter 2</title></head>
<body>
  <h1>Chapter 2</h1>
  <p>This is the second chapter.</p>
</body>
</html>
