fixtures/src/invalid/content-base-element/OEBPS/chapter1.xhtml
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE html>
<html xmlns="http://www.w3.org/1999/xhtml">
<head>
  <title>Chapter 1</title>
  <base href="http://example.com/"/>
</head>
<body>
  <h1>Chapter 1</h1>
  <p>Hello, world.</p>
</body>
</html>